# ReVancedBuilder

./: .gitignore  APKPure_dl.py  Cleanup.py  JAVABuilder.py  LICENSE  Notifications.py  PATCHES_GUIDE.md  README.md  ReVancedBuilder.py  build_revanced.sh  build_settings  download_apk.sh  download_apkmirror.sh  patches.txt  pyproject.toml  requirements.txt  versions.json
.github/workflows/: test.yml
example_configs/: build_config  chosen_patches  notification_config
src/: ReVancedBuilder.py
src/ReVancedBuilder/: APKPure_dl.py  Cleanup.py  JAVABuilder.py  Notifications.py  ReVancedBuilder.py
src/utils/: APKPure_dl.py  Cleanup.py  JAVABuilder.py  Notifications.py
