[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ReVancedBuilder"
authors = [{ name = "Sayantan Santra", email = "sayantan.santra689@gmail.com" }]
description = "A tool to automatically build latest releases of ReVanced apps"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["revanced", "patch"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["cloudscraper", "requests", "packaging", "bs4"]
version = "1.3"

[project.scripts]
ReVancedBuilder = "ReVancedBuilder:ReVancedBuilder"
