[project]
name = "ReVancedBuilder"
authors = [{ name = "Sayantan Santra", email = "sayantan.santra689@gmail.com" }]
description = "A tool to automatically build latest releases of ReVanced apps"
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["revanced", "patch"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["cloudscraper", "requests", "packaging", "bs4"]
version = "1.4.1"

[project.scripts]
ReVancedBuilder = "ReVancedBuilder:ReVancedBuilder"
