[project]
name = "ReVancedBuilder"
authors = [{ name = "Sayantan Santra", email = "sayantan.santra689@gmail.com" }]
description = "A tool to automatically build latest releases of ReVanced apps"
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["revanced", "patch"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["cloudscraper>=1.2.71", "requests>=2.32.5", "packaging>=26.0", "bs4>=0.0.2"]
version = "1.4.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
ReVancedBuilder = "ReVancedBuilder:ReVancedBuilder"

[project.urls]
homepage = "https://github.com/SinTan1729/ReVancedBuilder"

